@@ -80,14 +80,14 @@ index 518cb676ccaf..e971d1ef8a12 100644
  	return 0;
  }
  
-@@ -1088,6 +1098,7 @@ static int takedown_cpu(unsigned int cpu)
+@@ -1178,6 +1178,7 @@ static int takedown_cpu(unsigned int cpu)
  	struct cpuhp_cpu_state *st = per_cpu_ptr(&cpuhp_state, cpu);
  	int err;
  
 +	__cpu_unplug_wait(cpu);
  	/* Park the smpboot threads */
  	kthread_park(per_cpu_ptr(&cpuhp_state, cpu)->thread);
- 	smpboot_park_threads(cpu);
+ 
 -- 
 2.17.0
 
