@@ -1,5 +1,6 @@
 linux (4.9.110-3+deb9u3) UNRELEASED; urgency=medium
 
+  [ Salvatore Bonaccorso ]
   * Add L1 Terminal Fault fixes (CVE-2018-3620, CVE-2018-3646)
     - [x86] speculation/l1tf: Increase 32bit PAE __PHYSICAL_PAGE_SHIFT
     - [x86] mm: move _PAGE_SWP_SOFT_DIRTY from bit 7 to bit 1
@@ -104,6 +105,11 @@ linux (4.9.110-3+deb9u3) UNRELEASED; urgency=medium
       present
     - [x86] l1tf: Fix build error seen if CONFIG_KVM_INTEL is disabled
     - [x86] i8259: Add missing include file
+
+  [ Yves-Alexis Perez ]
+  * [rt] refresh 0284-cpu-rt-Rework-cpu-down-for-PREEMPT_RT and
+    0286-kernel-cpu-fix-cpu-down-problem-if-kthread-s-cpu-is- context after
+    applying L1TF fixes.
 
  -- Salvatore Bonaccorso <carnil@debian.org>  Wed, 15 Aug 2018 16:20:04 +0200
 
